add a even/odd calculator

--- a/hellloworld.html
+++ b/hellloworld.html
@@ -9,6 +9,20 @@
     <script type="text/javascript">
         alert('Hello, world! - using script tag with type attribute (old)');
     </script> -->
+    <script>
+        let user_input = prompt('Input number : ');
+        user_input = Number(user_input);
+
+        if(isNaN(user_input)){
+            alert('Not Correct, try again later')
+        } else if (user_input === 0) {
+            alert('The number is Zero')
+        } else if (user_input %2 === 0){
+            alert('Even Number')
+        } else {
+            alert('Odd Number')
+        }
+        </script>
     <script src="javascripts/testjs.js">
         alert('this will be ignored')
     </script>
